--- a/templates/wagtailadmin/login.html
+++ b/templates/wagtailadmin/login.html
@@ -1,7 +1,10 @@
-{% extends "wagtailadmin/base.html" %}
+{% extends "wagtailadmin/login.html" %}
 {% load static %}
-{% block branding_login %}مدیر گرامی خوش آمدید{% endblock %}
+{% block login_form %}
+{% block branding_login %}۲۰۲۰Black{% endblock %}
 {% block branding_logo %}
     <img src="{% static 'img/wagtailadmin/logo.png' %}" alt="2020 BLACK" width="80" />
 {% endblock %}
-{% block above_login %} شما مجاز به مشاهده این صفحه نیستید {% endblock %}
+    {{ block.super }}
+{% endblock %}
+{% block above_login %}مدیر گرامی خوش آمدید{% endblock %}
