--- a/static/css/blog/blogarchive/blogarchive.css
+++ b/static/css/blog/blogarchive/blogarchive.css
@@ -1,10 +1,3 @@
-.h1divhead {
-  background-color: black;
-  color: var(--red);
-  width: 100%;
-  height: 180px;
-  opacity: 0.5;
-}
 .blogh1 {
   text-align: center;
   padding-top: 50px;
@@ -14,15 +7,7 @@
   margin-top: 10px;
   margin-right: 20px;
 }
-.card {
-  width: 300px !important;
-  margin-bottom: 30px;
-  padding: 0;
-  text-align: center;
-}
-.card:hover {
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.486);
-}
+
 .aside {
   margin-top: 20px;
 }
@@ -31,8 +16,17 @@
   width: 100%;
   height: 50px;
 }
-
-.card a:hover::after {
+.card {
+  width: 300px !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0;
+  text-align: center;
+}
+.card:hover {
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.486);
+}
+.card a:hover::before {
   content: ". . .";
 }
 
