--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,44 @@
-@import url("color.css");
+@import url(responsive.css);
+@import url(color.css);
+
 @import url("util/header/header1.css");
 @import url("util/header/header2.css");
 @import url("util/header/header3.css");
-@import url("blog.css");
+@import url("util/header/header-responsive.css");
+
+@import url("blog/blogarchive/blogarchive.css");
+@import url("blog/blogsingle/blogsingle.css");
 
 @import url("util/footer/footer1.css");
 @import url("util/footer/footer2.css");
 @import url("util/footer/footer3.css");
 
+@import url("accounts/stylelogin.css");
+
+@import url("product/productarchive/productarchive.css");
+@import url("product/productsingle/productsingle.css");
+
+@import url("product/card/card.css");
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @font-face {
   font-family: vazir;
-  src: url(/fonts/Vazir-Medium.woff) format(woff);
+  src: url("/static/fonts/Vazir-Medium.woff") format(woff);
 }
-*,
+s *,
 body {
-  max-width: 100%;
   margin: 0 auto;
   padding: 0 auto;
   box-sizing: border-box;
   font-family: vazir;
   font-style: normal;
 }
-body {
-  direction: rtl;
+.container-fluid {
+  max-width: 1600px;
+}
+.navliststyle {
+  list-style: none;
+  display: inline;
 }
 ::selection {
   color: var(--white);
@@ -31,6 +46,9 @@ body {
 }
 a {
   text-decoration: none;
+  color: var(--red);
+}
+.ahover:hover {
   color: var(--red);
 }
 .p {
@@ -55,4 +73,55 @@ a {
 }
 .h6 {
   font-size: 14px;
+}
+.bchs {
+  background-color: #e7e7e7;
+  padding: 10px;
+  border-bottom: 1px solid #ff0000;
+  border-radius: 1px;
+}
+.bbs1px:hover {
+  border-bottom: 1px solid var(--red);
+}
+img {
+  margin-bottom: 10px;
+}
+
+.cursor {
+  cursor: pointer;
+}
+.blogh1 {
+  text-align: center;
+  padding-top: 50px;
+}
+.h1divhead {
+  background-color: black;
+  color: var(--red);
+  height: 180px;
+  opacity: 0.5;
+  margin-bottom: 10px;
+}
+.breadcrumb {
+  max-width: max-content;
+  text-align: right;
+  font-size: 15px;
+  padding: 8px 15px;
+  list-style: none;
+  background-color: #f3f4f5;
+  border-radius: 3px;
+}
+
+.breadcrumb > li {
+  display: block;
+}
+
+.breadcrumb > li + li:before {
+  content: "/\00a0";
+  padding: 0 5px;
+  color: #ccc;
+}
+
+.breadcrumb-dropdown + li:before,
+.breadcrumb-ellipsis + li:before {
+  display: none;
 }
