--- a/static/css/util/header/header2.css
+++ b/static/css/util/header/header2.css
@@ -12,23 +12,22 @@
 .logo {
   width: 100px;
   height: 60px;
+  margin-top: 8px;
 }
 .logosite {
   direction: ltr;
 }
-/* //////////////////////////////// */
-.logo {
-  width: 100px;
-  height: 60px;
-}
+
 .searchnox {
+  display: inline;
   margin-top: 18px;
   padding: 7px;
-  border: none;
-  border-radius: 10px;
-  background-color: rgb(206, 206, 206);
+  border: 1px solid rgb(209, 209, 209);
+  border-radius: 5px;
 }
-
+.searchnox[type="search"] {
+  width: 80%;
+}
 @media only screen and (max-width: 991px) and (min-width: 768px) {
   .container-fluid-custom .apshen a i {
     font-size: 12px;
@@ -36,15 +35,10 @@
   .apshen a {
     font-size: 12px;
   }
-
   .searchnox {
-    margin-top: 18px;
-    font-size: 12px;
     padding: 5px;
-    border: none;
-    border-radius: 10px;
-    margin-top: 20px;
   }
+
   .logo {
     margin-top: 10px;
     width: 80px;
@@ -57,20 +51,6 @@
   }
   .apshen a {
     font-size: 10px;
-  }
-
-  .searchnox {
-    display: none;
-  }
-  .logo {
-    margin-top: 10px;
-    width: 80px;
-    height: 50px;
-  }
-}
-@media only screen and (max-width: 576px) {
-  .container-fluid-custom .apshen a i {
-    display: none;
   }
 
   .searchnox {
