--- a/static/css/util/header/header3.css
+++ b/static/css/util/header/header3.css
@@ -1,18 +1,4 @@
-.navbar {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  float: right;
-}
-.navbar a {
-  text-align: center;
-  color: var(--black);
-  padding: 18px 10px;
-}
-
 .btn-group {
-  margin-top: 10px;
   width: 100%;
 }
 .btn-group .btn-danger {
@@ -23,11 +9,11 @@
   width: 100%;
 }
 .percent {
+  width: max-content;
   background-color: var(--red);
   border: none;
   border-radius: 5px;
   padding: 8px;
-  margin-top: 10px;
   font-size: 14px;
   color: rgb(255, 255, 255);
 }
@@ -36,4 +22,12 @@
 }
 .buttonpopup {
   direction: ltr;
+}
+.dropdown-toggle {
+  position: relative;
+}
+.menusite {
+  position: absolute;
+  right: 20px;
+  top: 1px;
 }
