--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,16 +1,37 @@
-{% extends 'base.html' %}
-{% block TITLE %}Register form{% endblock %}
-{% block CONTENT %}
-{% if user.is_authenticated %}
-<h3 style="color: red;"> Error : you are now Regiser ! </h3>
-<button onclick="window.history.back();">Go Back</button>
-<a href="{% url 'logout' %}"><button>logout</button></a>
-{% else %}
-  <h2>Register</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
-  {% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css"
+      integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/login/stylelogin.css" />
+    <title>efk به حساب کاربری</title>
+  </head>
+  <body>
+    <div class="container">
+      <section class="main">
+        <form class="form-3">
+          <label for="login">نام کاربری</label>
+          <input type="text" name="login" id="login" placeholder="Username" />
+          <label for="password">رمزعبور</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Password"
+          />
+          <input type="checkbox" name="remember" id="remember" />
+          <label for="remember">مرا به خاطر بسپار</label>
+          <input type="submit" name="submit" value="ورود" />
+        </form>
+      </section>
+    </div>
+  </body>
+</html>
