--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,12 @@
 {% load jalali_tags %}
 
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block TITLE %}{% endblock %}</title>
-    {% block HEADING %}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.21/jquery.zoom.min.js"></script>
@@ -17,6 +16,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css"
     integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT"
     crossorigin="anonymous"/>
+    {% block HEADING %}{% endblock %}
     {% block CSS %}{% endblock %}
 </head>
 <body>
