--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -2,11 +2,9 @@
 {% load wagtailcore_tags %}
 {% block TITLE %}{{ page.title }}{% endblock %}
 {% block CONTENT %}
-{% include 'utils/header.html' %}
-{% for shop in page.get_children. %}
-{% for product in shop.specific.product_title %}
-{{ product|richtext }}
+{% include 'utils/header/header.html' %}
+{% for product in products %}
+{{ product.product_title }}
 {% endfor %}
-{% endfor %}
-{% include 'utils/footer.html' %}
+{% include 'utils/footer/footer.html' %}
 {% endblock %}
