cart camplate --MODIFIED

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@
 @import url("product/productarchive/productarchive.css");
 @import url("product/productsingle/productsingle.css");
 
-@import url("product/card/card.css");
+@import url("product/cart/cart.css");
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @font-face {
