--- a/templates/products/cart/cart.html
+++ b/templates/products/cart/cart.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% load product_tag %}
 {% load static %}
-{% load custom_filters %}
 
 {% block TITLE %}سبد خرید{% endblock %}
 
