--- a/templates/blog/blogarchive/blogarchive.html
+++ b/templates/blog/blogarchive/blogarchive.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load wagtailcore_tags %}
-{% load custom_filters %}
+{% load blog_tag %}
 {% block TITLE %}{{ page.title }}{% endblock %}
 {% block CSS %}
 <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
