--- a/templates/blog/blogarchive/blogarchive.html
+++ b/templates/blog/blogarchive/blogarchive.html
@@ -65,7 +65,7 @@
     var perPage = 9;
 
     function loadPosts() {
-      $.getJSON('/api/blog/', { page: page, per_page: perPage }, function(data) {
+      $.getJSON('/SiteAPI/blog/posts', { page: page, per_page: perPage }, function(data) {
         var posts = data.posts;
         if (posts.length > 0) {
           for (var i = 0; i < posts.length; i++) {
