--- a/templates/blog/blogarchive/blogarchive.html
+++ b/templates/blog/blogarchive/blogarchive.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% load wagtailcore_tags %}
-{% load blog_tag %}
 {% block TITLE %}{{ page.title }}{% endblock %}
 {% block CSS %}
-<link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+<link rel="stylesheet" href="{% static 'css/blogarchive/blogarchive.css' %}" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.min.css">
 {% endblock %}
 {% block HEADJS %}
@@ -34,7 +33,7 @@
                   {% endif %}
                   <div class="card-body">
                     <h3 class="card-title h3">{{ post.title }}</h3>
-                    <span class="bi bi-person">{{ post.owner }}</span><br>
+                    <span class="bi bi-person">{{ post.author }}</span><br>
                     {% with categories=post.collection %}
                       {% if categories %}
                         {% for category in categories.all %}
@@ -43,7 +42,7 @@
                       {% endif %}
                     {% endwith %}
                     <span class="card-text">{{ post.intro|richtext }}</span><br>
-                    <span class="bi bi-calendar3">{{ post.date|jpub }}</span></p>
+                    <span class="bi bi-calendar3">{{ post.jpub }}</span></p>
                     <a href="{% pageurl post %}">مشاهده بیشتر</a>
                   </div>
                 </div>
@@ -65,7 +64,7 @@
     var perPage = 9;
 
     function loadPosts() {
-      $.getJSON('/SiteAPI/blog/posts', { page: page, per_page: perPage }, function(data) {
+      $.getJSON('/UNIQUEAPI174/pages/?child_of=4', { offset: page, limit: perPage }, function(data) {
         var posts = data.posts;
         if (posts.length > 0) {
           for (var i = 0; i < posts.length; i++) {
